<?xml version="1.0"?>
<package>
  <name>navio_ros</name>
  <version>0.0.1</version>
  <description>Navio2 drivers for ros</description>
  <author>Ben Burgess-Limerick</author>
  <license>MIT</license>
  <maintainer email="benburgesslimerick@gmail.com"></maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
  </export>
</package>
